--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
             </div>
             <div class='sketch-area'>
                 <div class='sketch-box'>
+                    <div class='square'></div>
+                    <div class='square'></div>
+                    <div class='square'></div>
+                    <div class='square'></div>
                 </div>
             </div>
         </div>
