Finished scripts for grid

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             </div>
         <div class='game-container'>
             <div class='top-bar'>
-
+                <button>Edit Size</button>
             </div>
             <div class='sketch-area'>
                 <div class='sketch-box'>
